@@ -14,34 +14,34 @@
  */
 package org.hyperledger.besu.cli.config;
 
+import org.hyperledger.besu.config.DiscoveryOptions;
 import org.hyperledger.besu.config.GenesisConfig;
-import org.hyperledger.besu.config.GenesisConfigOptions;
+import org.hyperledger.besu.config.NetworkDefinition;
+import org.hyperledger.besu.ethereum.p2p.discovery.dns.EthereumNodeRecord;
 import org.hyperledger.besu.ethereum.p2p.peers.EnodeURLImpl;
-import org.hyperledger.besu.plugin.data.EnodeURL;
 
 import java.io.IOException;
 import java.io.InputStream;
 import java.math.BigInteger;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * The Eth network config.
  *
  * @param genesisConfig Genesis Config File
  * @param networkId Network Id
- * @param bootNodes Boot Nodes
+ * @param enodeBootNodes Enode Boot Nodes
+ * @param enrBootNodes ENR Boot Nodes
  * @param dnsDiscoveryUrl DNS Discovery URL
  */
 public record EthNetworkConfig(
     GenesisConfig genesisConfig,
     BigInteger networkId,
-    List<EnodeURL> bootNodes,
+    List<EnodeURLImpl> enodeBootNodes,
+    List<EthereumNodeRecord> enrBootNodes,
     String dnsDiscoveryUrl) {
 
   /**
@@ -49,40 +49,48 @@ public record EthNetworkConfig(
    *
    * @param genesisConfig the genesis config
    * @param networkId the network id
-   * @param bootNodes the boot nodes
+   * @param enodeBootNodes the Enode boot nodes
+   * @param enrBootNodes the ENR boot nodes
    * @param dnsDiscoveryUrl the dns discovery url
    */
   @SuppressWarnings(
       "MethodInputParametersMustBeFinal") // needed since record constructors are not yet supported
   public EthNetworkConfig {
     Objects.requireNonNull(genesisConfig);
-    Objects.requireNonNull(bootNodes);
+    Objects.requireNonNull(enodeBootNodes);
+    Objects.requireNonNull(enrBootNodes);
   }
 
   /**
    * Gets network config.
    *
-   * @param networkName the network name
+   * @param networkDefinition the network name
    * @return the network config
    */
-  public static EthNetworkConfig getNetworkConfig(final NetworkName networkName) {
-    final URL genesisSource = jsonConfigSource(networkName.getGenesisFile());
+  public static EthNetworkConfig getNetworkConfig(final NetworkDefinition networkDefinition) {
+    final URL genesisSource = jsonConfigSource(networkDefinition.getGenesisFile());
     final GenesisConfig genesisConfig = GenesisConfig.fromSource(genesisSource);
-    final GenesisConfigOptions genesisConfigOptions = genesisConfig.getConfigOptions();
-    final Optional<List<String>> rawBootNodes =
-        genesisConfigOptions.getDiscoveryOptions().getBootNodes();
-    final List<EnodeURL> bootNodes =
-        rawBootNodes
-            .map(
-                strings ->
-                    strings.stream().map(EnodeURLImpl::fromString).collect(Collectors.toList()))
-            .orElse(Collections.emptyList());
+    final DiscoveryOptions discoveryOptions =
+        genesisConfig.getConfigOptions().getDiscoveryOptions();
+
+    final List<EnodeURLImpl> enodeBootNodes =
+        discoveryOptions
+            .getBootNodes()
+            .map(nodes -> nodes.stream().map(EnodeURLImpl::fromString).toList())
+            .orElse(List.of());
+
+    final List<EthereumNodeRecord> enrBootNodes =
+        discoveryOptions
+            .getV5BootNodes()
+            .map(nodes -> nodes.stream().map(EthereumNodeRecord::fromEnr).toList())
+            .orElse(List.of());
 
     return new EthNetworkConfig(
         genesisConfig,
-        networkName.getNetworkId(),
-        bootNodes,
-        genesisConfigOptions.getDiscoveryOptions().getDiscoveryDnsUrl().orElse(null));
+        networkDefinition.getNetworkId(),
+        enodeBootNodes,
+        enrBootNodes,
+        discoveryOptions.getDiscoveryDnsUrl().orElse(null));
   }
 
   private static URL jsonConfigSource(final String resourceName) {
@@ -95,7 +103,7 @@ public record EthNetworkConfig(
    * @param network the named network
    * @return the json string
    */
-  public static String jsonConfig(final NetworkName network) {
+  public static String jsonConfig(final NetworkDefinition network) {
     try (final InputStream genesisFileInputStream =
         EthNetworkConfig.class.getResourceAsStream(network.getGenesisFile())) {
       return new String(genesisFileInputStream.readAllBytes(), StandardCharsets.UTF_8);
@@ -110,7 +118,8 @@ public record EthNetworkConfig(
     private String dnsDiscoveryUrl;
     private GenesisConfig genesisConfig;
     private BigInteger networkId;
-    private List<EnodeURL> bootNodes;
+    private List<EnodeURLImpl> enodeBootNodes;
+    private List<EthereumNodeRecord> enrBootNodes;
 
     /**
      * Instantiates a new Builder.
@@ -120,7 +129,8 @@ public record EthNetworkConfig(
     public Builder(final EthNetworkConfig ethNetworkConfig) {
       this.genesisConfig = ethNetworkConfig.genesisConfig;
       this.networkId = ethNetworkConfig.networkId;
-      this.bootNodes = ethNetworkConfig.bootNodes;
+      this.enodeBootNodes = ethNetworkConfig.enodeBootNodes;
+      this.enrBootNodes = ethNetworkConfig.enrBootNodes;
       this.dnsDiscoveryUrl = ethNetworkConfig.dnsDiscoveryUrl;
     }
 
@@ -149,11 +159,22 @@ public record EthNetworkConfig(
     /**
      * Sets boot nodes.
      *
-     * @param bootNodes the boot nodes
+     * @param enodeBootNodes the boot nodes
      * @return this builder
      */
-    public Builder setBootNodes(final List<EnodeURL> bootNodes) {
-      this.bootNodes = bootNodes;
+    public Builder setEnodeBootNodes(final List<EnodeURLImpl> enodeBootNodes) {
+      this.enodeBootNodes = enodeBootNodes;
+      return this;
+    }
+
+    /**
+     * Sets ENR boot nodes.
+     *
+     * @param enrBootNodes the boot nodes
+     * @return this builder
+     */
+    public Builder setEnrBootNodes(final List<EthereumNodeRecord> enrBootNodes) {
+      this.enrBootNodes = enrBootNodes;
       return this;
     }
 
@@ -174,7 +195,8 @@ public record EthNetworkConfig(
      * @return the eth network config
      */
     public EthNetworkConfig build() {
-      return new EthNetworkConfig(genesisConfig, networkId, bootNodes, dnsDiscoveryUrl);
+      return new EthNetworkConfig(
+          genesisConfig, networkId, enodeBootNodes, enrBootNodes, dnsDiscoveryUrl);
     }
   }
 }
