@@ -14,12 +14,15 @@
  */
 package org.hyperledger.besu.ethereum.p2p.config;
 
-import org.hyperledger.besu.plugin.data.EnodeURL;
+import org.hyperledger.besu.ethereum.p2p.discovery.NodeIdentifier;
+import org.hyperledger.besu.ethereum.p2p.discovery.dns.EthereumNodeRecord;
+import org.hyperledger.besu.ethereum.p2p.peers.EnodeURLImpl;
 import org.hyperledger.besu.util.NetworkUtility;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 public class DiscoveryConfiguration {
@@ -29,23 +32,30 @@ public class DiscoveryConfiguration {
   private int bindPort = 30303;
   private String advertisedHost = "127.0.0.1";
   private int bucketSize = 16;
-  private List<EnodeURL> bootnodes = new ArrayList<>();
+  private List<EnodeURLImpl> enodeBootnodes = new ArrayList<>();
+  private List<EthereumNodeRecord> enrBootnodes = new ArrayList<>();
   private String dnsDiscoveryURL;
   private boolean discoveryV5Enabled = false;
   private boolean filterOnEnrForkId = NetworkingConfiguration.DEFAULT_FILTER_ON_ENR_FORK_ID;
   private boolean includeBootnodesOnPeerRefresh = true;
+  private Optional<String> bindHostIpv6 = Optional.empty();
+  private int bindPortIpv6 = EnodeURLImpl.DEFAULT_LISTENING_PORT_IPV6;
+  private Optional<String> advertisedHostIpv6 = Optional.empty();
+  private boolean preferIpv6Outbound = false;
 
   public static DiscoveryConfiguration create() {
     return new DiscoveryConfiguration();
   }
 
-  public static void assertValidBootnodes(final List<EnodeURL> bootnodes) {
-    final List<EnodeURL> invalidEnodes =
-        bootnodes.stream().filter(e -> !e.isRunningDiscovery()).collect(Collectors.toList());
+  public static void assertValidBootnodes(final List<? extends NodeIdentifier> bootnodes) {
+    final List<? extends NodeIdentifier> invalidEnodes =
+        bootnodes.stream()
+            .filter(e -> e.getUdpDiscoveryPort().isEmpty() && e.getIpV6UdpDiscoveryPort().isEmpty())
+            .toList();
 
-    if (invalidEnodes.size() > 0) {
+    if (!invalidEnodes.isEmpty()) {
       final String invalidBootnodes =
-          invalidEnodes.stream().map(EnodeURL::toString).collect(Collectors.joining(","));
+          invalidEnodes.stream().map(NodeIdentifier::toString).collect(Collectors.joining(","));
       final String errorMsg =
           "Bootnodes must have discovery enabled. Invalid bootnodes: " + invalidBootnodes + ".";
       throw new IllegalArgumentException(errorMsg);
@@ -79,14 +89,28 @@ public class DiscoveryConfiguration {
     return this;
   }
 
-  public List<EnodeURL> getBootnodes() {
-    return bootnodes;
+  public List<EnodeURLImpl> getEnodeBootnodes() {
+    return enodeBootnodes;
   }
 
-  public DiscoveryConfiguration setBootnodes(final List<EnodeURL> bootnodes) {
-    assertValidBootnodes(bootnodes);
-    this.bootnodes = bootnodes;
+  public DiscoveryConfiguration setEnodeBootnodes(final List<EnodeURLImpl> enodeBootnodes) {
+    assertValidBootnodes(enodeBootnodes);
+    this.enodeBootnodes = enodeBootnodes;
     return this;
+  }
+
+  public List<EthereumNodeRecord> getEnrBootnodes() {
+    return enrBootnodes;
+  }
+
+  public DiscoveryConfiguration setEnrBootnodes(final List<EthereumNodeRecord> enrBootnodes) {
+    assertValidBootnodes(enrBootnodes);
+    this.enrBootnodes = enrBootnodes;
+    return this;
+  }
+
+  public List<? extends NodeIdentifier> getBootnodeIdentifiers() {
+    return discoveryV5Enabled ? enrBootnodes : enodeBootnodes;
   }
 
   public boolean getIncludeBootnodesOnPeerRefresh() {
@@ -142,6 +166,46 @@ public class DiscoveryConfiguration {
     return filterOnEnrForkId;
   }
 
+  public Optional<String> getBindHostIpv6() {
+    return bindHostIpv6;
+  }
+
+  public DiscoveryConfiguration setBindHostIpv6(final Optional<String> bindHostIpv6) {
+    this.bindHostIpv6 = bindHostIpv6;
+    return this;
+  }
+
+  public int getBindPortIpv6() {
+    return bindPortIpv6;
+  }
+
+  public DiscoveryConfiguration setBindPortIpv6(final int bindPortIpv6) {
+    this.bindPortIpv6 = bindPortIpv6;
+    return this;
+  }
+
+  public Optional<String> getAdvertisedHostIpv6() {
+    return advertisedHostIpv6;
+  }
+
+  public DiscoveryConfiguration setAdvertisedHostIpv6(final Optional<String> advertisedHostIpv6) {
+    this.advertisedHostIpv6 = advertisedHostIpv6;
+    return this;
+  }
+
+  public boolean isDualStackEnabled() {
+    return bindHostIpv6.isPresent();
+  }
+
+  public boolean isPreferIpv6Outbound() {
+    return preferIpv6Outbound;
+  }
+
+  public DiscoveryConfiguration setPreferIpv6Outbound(final boolean preferIpv6Outbound) {
+    this.preferIpv6Outbound = preferIpv6Outbound;
+    return this;
+  }
+
   @Override
   public boolean equals(final Object o) {
     if (o == this) {
@@ -154,16 +218,32 @@ public class DiscoveryConfiguration {
     return enabled == that.enabled
         && bindPort == that.bindPort
         && bucketSize == that.bucketSize
+        && bindPortIpv6 == that.bindPortIpv6
         && Objects.equals(bindHost, that.bindHost)
         && Objects.equals(advertisedHost, that.advertisedHost)
-        && Objects.equals(bootnodes, that.bootnodes)
-        && Objects.equals(dnsDiscoveryURL, that.dnsDiscoveryURL);
+        && Objects.equals(enodeBootnodes, that.enodeBootnodes)
+        && Objects.equals(enrBootnodes, that.enrBootnodes)
+        && Objects.equals(dnsDiscoveryURL, that.dnsDiscoveryURL)
+        && Objects.equals(bindHostIpv6, that.bindHostIpv6)
+        && Objects.equals(advertisedHostIpv6, that.advertisedHostIpv6)
+        && preferIpv6Outbound == that.preferIpv6Outbound;
   }
 
   @Override
   public int hashCode() {
     return Objects.hash(
-        enabled, bindHost, bindPort, advertisedHost, bucketSize, bootnodes, dnsDiscoveryURL);
+        enabled,
+        bindHost,
+        bindPort,
+        advertisedHost,
+        bucketSize,
+        enodeBootnodes,
+        enrBootnodes,
+        dnsDiscoveryURL,
+        bindHostIpv6,
+        bindPortIpv6,
+        advertisedHostIpv6,
+        preferIpv6Outbound);
   }
 
   @Override
@@ -181,14 +261,24 @@ public class DiscoveryConfiguration {
         + '\''
         + ", bucketSize="
         + bucketSize
-        + ", bootnodes="
-        + bootnodes
+        + ", enodeBootnodes="
+        + enodeBootnodes
+        + ", enrBootnodes="
+        + enrBootnodes
         + ", dnsDiscoveryURL="
         + dnsDiscoveryURL
         + ", isDiscoveryV5Enabled="
         + discoveryV5Enabled
         + ", isFilterOnEnrForkIdEnabled="
         + filterOnEnrForkId
+        + ", bindHostIpv6="
+        + bindHostIpv6
+        + ", bindPortIpv6="
+        + bindPortIpv6
+        + ", advertisedHostIpv6="
+        + advertisedHostIpv6
+        + ", preferIpv6Outbound="
+        + preferIpv6Outbound
         + '}';
   }
 }
