@@ -1,5 +1,5 @@
 /*
- * Copyright ConsenSys AG.
+ * Copyright contributors to Besu.
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
  * the License. You may obtain a copy of the License at
@@ -22,9 +22,10 @@ import org.hyperledger.besu.evm.account.MutableAccount;
 import org.hyperledger.besu.evm.contractvalidation.ContractValidationRule;
 import org.hyperledger.besu.evm.frame.ExceptionalHaltReason;
 import org.hyperledger.besu.evm.frame.MessageFrame;
+import org.hyperledger.besu.evm.log.TransferLogEmitter;
 import org.hyperledger.besu.evm.tracing.OperationTracer;
 
-import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
@@ -44,6 +45,9 @@ public class ContractCreationProcessor extends AbstractMessageProcessor {
 
   private final List<ContractValidationRule> contractValidationRules;
 
+  /** Strategy for emitting ETH transfer logs (no-op before Amsterdam, EIP-7708 after). */
+  private final TransferLogEmitter transferLogEmitter;
+
   /**
    * Instantiates a new Contract creation processor.
    *
@@ -58,11 +62,14 @@ public class ContractCreationProcessor extends AbstractMessageProcessor {
       final boolean requireCodeDepositToSucceed,
       final List<ContractValidationRule> contractValidationRules,
       final long initialContractNonce,
-      final Collection<Address> forceCommitAddresses) {
-    super(evm, forceCommitAddresses);
-    this.requireCodeDepositToSucceed = requireCodeDepositToSucceed;
-    this.contractValidationRules = contractValidationRules;
-    this.initialContractNonce = initialContractNonce;
+      final Set<Address> forceCommitAddresses) {
+    this(
+        evm,
+        requireCodeDepositToSucceed,
+        contractValidationRules,
+        initialContractNonce,
+        forceCommitAddresses,
+        TransferLogEmitter.NOOP);
   }
 
   /**
@@ -78,7 +85,37 @@ public class ContractCreationProcessor extends AbstractMessageProcessor {
       final boolean requireCodeDepositToSucceed,
       final List<ContractValidationRule> contractValidationRules,
       final long initialContractNonce) {
-    this(evm, requireCodeDepositToSucceed, contractValidationRules, initialContractNonce, Set.of());
+    this(
+        evm,
+        requireCodeDepositToSucceed,
+        contractValidationRules,
+        initialContractNonce,
+        Collections.emptySet(),
+        TransferLogEmitter.NOOP);
+  }
+
+  /**
+   * Instantiates a new Contract creation processor with transfer log emission support.
+   *
+   * @param evm the evm
+   * @param requireCodeDepositToSucceed the require code deposit to succeed
+   * @param contractValidationRules the contract validation rules
+   * @param initialContractNonce the initial contract nonce
+   * @param forceCommitAddresses the force commit addresses
+   * @param transferLogEmitter strategy for emitting transfer logs
+   */
+  public ContractCreationProcessor(
+      final EVM evm,
+      final boolean requireCodeDepositToSucceed,
+      final List<ContractValidationRule> contractValidationRules,
+      final long initialContractNonce,
+      final Set<Address> forceCommitAddresses,
+      final TransferLogEmitter transferLogEmitter) {
+    super(evm, forceCommitAddresses);
+    this.requireCodeDepositToSucceed = requireCodeDepositToSucceed;
+    this.contractValidationRules = contractValidationRules;
+    this.initialContractNonce = initialContractNonce;
+    this.transferLogEmitter = transferLogEmitter;
   }
 
   private static boolean accountExists(final Account account) {
@@ -111,6 +148,11 @@ public class ContractCreationProcessor extends AbstractMessageProcessor {
       } else {
         frame.addCreate(contractAddress);
         contract.incrementBalance(frame.getValue());
+
+        // Emit transfer log for nonzero value contract creation (no-op before Amsterdam)
+        transferLogEmitter.emitTransferLog(
+            frame, frame.getSenderAddress(), contractAddress, frame.getValue());
+
         contract.setNonce(initialContractNonce);
         contract.clearStorage();
         frame.setState(MessageFrame.State.CODE_EXECUTING);
@@ -127,8 +169,26 @@ public class ContractCreationProcessor extends AbstractMessageProcessor {
     final Bytes contractCode =
         frame.getCreatedCode() == null ? frame.getOutputData() : frame.getCreatedCode().getBytes();
 
-    final long depositFee = evm.getGasCalculator().codeDepositGasCost(contractCode.size());
+    // Oversized contracts must fail without charging code deposit gas or state gas.
+    // We must check this first.
+    final Optional<ExceptionalHaltReason> firstValidationFailure =
+        contractValidationRules.stream()
+            .map(rule -> rule.validate(contractCode, frame, evm))
+            .flatMap(Optional::stream)
+            .findFirst();
+    if (firstValidationFailure.isPresent()) {
+      if (frame.getDepth() == 0) {
+        failCodeDepositWithoutRollback(frame, operationTracer, firstValidationFailure);
+      } else {
+        frame.setExceptionalHaltReason(firstValidationFailure);
+        frame.setState(MessageFrame.State.EXCEPTIONAL_HALT);
+        operationTracer.traceAccountCreationResult(frame, firstValidationFailure);
+      }
+      return;
+    }
 
+    // Check and charge code deposit gas (regular gas) before state gas
+    final long depositFee = evm.getGasCalculator().codeDepositGasCost(contractCode.size());
     if (frame.getRemainingGas() < depositFee) {
       LOG.trace(
           "Not enough gas to pay the code deposit fee for {}: "
@@ -145,34 +205,78 @@ public class ContractCreationProcessor extends AbstractMessageProcessor {
       } else {
         frame.setState(MessageFrame.State.COMPLETED_SUCCESS);
       }
-    } else {
-      final var invalidReason =
-          contractValidationRules.stream()
-              .map(rule -> rule.validate(contractCode, frame, evm))
-              .filter(Optional::isPresent)
-              .findFirst();
-      if (invalidReason.isEmpty()) {
-        frame.decrementRemainingGas(depositFee);
-
-        // Finalize contract creation, setting the contract code.
-        final MutableAccount contract =
-            frame.getWorldUpdater().getOrCreate(frame.getContractAddress());
-        contract.setCode(contractCode);
-        LOG.trace(
-            "Successful creation of contract {} with code of size {} (Gas remaining: {})",
-            frame.getContractAddress(),
-            contractCode.size(),
-            frame.getRemainingGas());
-        frame.setState(MessageFrame.State.COMPLETED_SUCCESS);
-        if (operationTracer.isExtendedTracing()) {
-          operationTracer.traceAccountCreationResult(frame, Optional.empty());
-        }
-      } else {
-        final Optional<ExceptionalHaltReason> exceptionalHaltReason = invalidReason.get();
-        frame.setExceptionalHaltReason(exceptionalHaltReason);
-        frame.setState(MessageFrame.State.EXCEPTIONAL_HALT);
-        operationTracer.traceAccountCreationResult(frame, exceptionalHaltReason);
-      }
+      return;
     }
+    frame.decrementRemainingGas(depositFee);
+
+    // Only now charge state gas for code deposit (cpsb * codeSize).
+    if (!evm.getGasCalculator()
+        .stateGasCostCalculator()
+        .chargeCodeDepositStateGas(frame, contractCode.size())) {
+      LOG.trace("Contract creation error: insufficient state gas for code deposit");
+      if (frame.getDepth() == 0) {
+        // Do NOT force-charge state gas here. The spec's charge_state_gas raises
+        // OutOfGasError without modifying anything (no reservoir drain, no stateGasUsed
+        // increment). failCodeDepositWithoutRollback clears remaining gas, matching
+        // the spec's exception handler behavior of burning gas_left.
+        failCodeDepositWithoutRollback(
+            frame, operationTracer, Optional.of(ExceptionalHaltReason.INSUFFICIENT_GAS));
+      } else {
+        frame.setExceptionalHaltReason(Optional.of(ExceptionalHaltReason.INSUFFICIENT_GAS));
+        frame.setState(MessageFrame.State.EXCEPTIONAL_HALT);
+        operationTracer.traceAccountCreationResult(
+            frame, Optional.of(ExceptionalHaltReason.INSUFFICIENT_GAS));
+      }
+      return;
+    }
+
+    final MutableAccount contract = frame.getWorldUpdater().getOrCreate(frame.getContractAddress());
+    contract.setCode(contractCode);
+    LOG.trace(
+        "Successful creation of contract {} with code of size {} (Gas remaining: {})",
+        frame.getContractAddress(),
+        contractCode.size(),
+        frame.getRemainingGas());
+    frame.setState(MessageFrame.State.COMPLETED_SUCCESS);
+    if (operationTracer.isExtendedTracing()) {
+      operationTracer.traceAccountCreationResult(frame, Optional.empty());
+    }
+  }
+
+  /**
+   * Fails a depth-0 code deposit without triggering the normal EXCEPTIONAL_HALT rollback path. This
+   * preserves stateGasUsed for EIP-8037 block gas accounting. The world state is still reverted and
+   * all gas is cleared.
+   *
+   * @param frame the message frame
+   * @param operationTracer the operation tracer
+   * @param haltReason the exceptional halt reason to report
+   */
+  private void failCodeDepositWithoutRollback(
+      final MessageFrame frame,
+      final OperationTracer operationTracer,
+      final Optional<ExceptionalHaltReason> haltReason) {
+    LOG.trace(
+        "Contract creation failed (no rollback): {} for address {}",
+        haltReason,
+        frame.getContractAddress());
+    // Revert world state changes without calling frame.rollback() (which would undo stateGasUsed).
+    // revert() undoes the world state mutations from this frame's execution.
+    // commit() propagates the reverted (clean) state to the parent updater.
+    // frame.rollback() is deliberately avoided: it would undo stateGasUsed tracking via the
+    // UndoScalar mechanism, which must be preserved for EIP-8037 block gas accounting.
+    frame.getWorldUpdater().revert();
+    frame.getWorldUpdater().commit();
+    frame.clearLogs();
+    frame.clearGasRefund();
+    frame.clearGasRemaining();
+    frame.clearOutputData();
+    // Do NOT call frame.setExceptionalHaltReason() here.
+    // MainnetTransactionProcessor (processTransaction ~line 454) zeros the state gas reservoir when
+    // exceptionalHaltReason is present. For depth-0 code deposit failures, the reservoir must be
+    // preserved to avoid inflating block gas accounting. COMPLETED_FAILED state is sufficient to
+    // signal failure. If MTP's reservoir-zeroing logic changes, this assumption must be revisited.
+    frame.setState(MessageFrame.State.COMPLETED_FAILED);
+    operationTracer.traceAccountCreationResult(frame, haltReason);
   }
 }
